--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,20 @@ body {
     font-size: 16px;
     font-family: 'Raleway', sans-serif;
     margin-bottom: 100px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
+header {
+    padding-top: 7rem;
+    padding-bottom: 2rem;
+}
+main {
+    width: 50%;
+}
+
 
 h1 {
     font-size: 3rem;
@@ -22,7 +35,11 @@ label {
 
 .insert-book {
     display: flex;
-
+    flex-direction: column;
+}
+.wrapper {
+    display: flex;
+    justify-content: space-between;
 }
 .input {
     display: flex;
