--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,19 @@ label {
     font-size: 1.2rem;
     font-weight: 600;
 }
+input, select {
+    margin-top: 1rem;
+    padding: .5rem;
+}
+table {
+    width: 100%;
+}
+tr {
+    line-height: 1.5;
+}
+td {
+    padding-top: 1rem;
+}
 
 .insert-book {
     display: flex;
@@ -44,4 +57,10 @@ label {
 .input {
     display: flex;
     flex-direction: column;
+}
+
+.head {
+    line-height: 3;
+    text-align: center;
+    border-bottom: solid 1.5px black;
 }
